--- a/libnetwork/TODO
+++ b/libnetwork/TODO
@@ -7,6 +7,7 @@
 
 * ARP
   - prevoir une gestion d'autre chose qu'Ethernet
+  - gestion des doublons
 
 * ICMPv4
   - faire tout les autres messages
