--- a/doc/hexo_manual/c_hexo_api.texi
+++ b/doc/hexo_manual/c_hexo_api.texi
@@ -1,49 +1,61 @@
 
-@node Integer types, Endian and alignment, , Hexo API
-@section Integer types
-@include c_hexo_api/types.texi
-
-@node Endian and alignment, System startup, Integer types, Hexo API
-@section Endian and alignment
-@include c_hexo_api/endian.texi
-
-@node System startup, Atomic integer access, Endian and alignment, Hexo API
+@page
+@node System startup, Integer types, , Hexo API
 @section System startup
 @include c_hexo_api/init.texi
 
+@page
+@node Integer types, Endian and alignment, System startup, Hexo API
+@section Integer types
+@include c_hexo_api/types.texi
+
+@page
+@node Endian and alignment, Atomic integer access, Integer types, Hexo API
+@section Endian and alignment
+@include c_hexo_api/endian.texi
+
+@page
 @node Atomic integer access, Spinlocks, System startup, Hexo API
 @section Atomic integer access
 @include c_hexo_api/atomic.texi
 
+@page
 @node Spinlocks, Memory allocation, Atomic integer access, Hexo API
 @section Spinlocks
 @include c_hexo_api/lock.texi
 
+@page
 @node Memory allocation, Processor and context local data, Spinlocks, Hexo API
 @section  Memory allocation
 @c alloc.h segment.h
 @include c_hexo_api/memory_allocation.texi
 
+@page
 @node Processor and context local data, IO Space access, Memory allocation, Hexo API
 @section Processor and context local variables
 @include c_hexo_api/local.texi
 
+@page
 @node IO Space access, Processor events, Processor and context local data, Hexo API
 @section IO Space access
 @include c_hexo_api/iospace.texi
 
+@page
 @node Processor events,  Processor specific features, IO Space access, Hexo API
 @section Processor events
 @include c_hexo_api/interrupts.texi
 
+@page
 @node Processor specific features, Running contexts management, Processor events, Hexo API
 @section Processor specific features
 @include c_hexo_api/cpu.texi
 
+@page
 @node Running contexts management, Generic contexts scheduler,  Processor specific features, Hexo API
 @section Running contexts management
 @include c_hexo_api/context.texi
 
+@page
 @node Generic contexts scheduler,  , Running contexts management, Hexo API
 @section Generic contexts scheduler
 @include c_hexo_api/sheduler.texi
