--- a/doc/hexo_manual/c_hexo_api/memory_allocation.texi
+++ b/doc/hexo_manual/c_hexo_api/memory_allocation.texi
@@ -7,7 +7,8 @@
 @node General purpose memory allocation, Memory regions, Memory allocation
 @subsection General purpose memory allocation
 
-The general purpose memory allocation interface provide by Hexo allows
+@findex malloc
+The general purpose memory allocation interface provided by Hexo allows
 allocation of memory blocks for common programming tasks. These
 features are similar to the @code{malloc()} functions family with
 optional memory region selection mechanism. Memory allocation and
@@ -15,20 +16,27 @@ freeing can be perform with the following functions:
 
 @itemize
 
+@findex mem_alloc
 @item @code{void *mem_alloc(size_t size, struct mem_alloc_region_s *region)}
       allocates a block of memory of the requested size in the specified memory
       region. A set of macro must be used to allocate memory on standard region.
       This function is equivalent to @code{malloc()} when called with the
       @code{MEM_SCOPE_DEFAULT} macro as second parameters. @xref{Memory regions} for details.
 
+@findex mem_free
 @item @code{void mem_free(void *ptr)} frees a block of memory.
 
+@findex mem_alloc_getsize
 @item @code{size_t mem_alloc_getsize(void *ptr)} returns the size of
       an allocated memory block.
 
+@findex mem_alloc_set_default
 @item @code{void mem_alloc_set_default(struct mem_alloc_region_s *region)} changes
       the default memory allocation scope. @xref{Memory regions} for details.
 
+@findex calloc
+@findex free
+@findex realloc
 Standards functions @code{calloc()}, @code{malloc()},  @code{free()} and 
 @code{realloc()} functions found in @code{<stdlib.h>} use the above functions.
 
@@ -37,8 +45,8 @@ Standards functions @code{calloc()}, @code{malloc()},  @code{free()} and
 @node Memory regions,  , General purpose memory allocation, Memory allocation
 @subsection Memory regions
 
-Hexo allow control of allocated memory blocks placement in
-memory. Memory address space is split in regions, this allow placement
+Hexo allows control of allocated memory blocks placement in
+memory. Memory address space is split in regions, this allows placement
 of allocated memory blocks in different location like global system
 memory area, cpu local memory area, ... Available regions may vary
 depending on current platform and Hexo configuration.
@@ -51,23 +59,28 @@ other memory region when the requested scope is not available.
 Here is a list of default memory scope macros:
 
 @itemize
+@vindex MEM_SCOPE_SYSTEM
 @item The @code{MEM_SCOPE_SYSTEM} macro must be used when memory block must be
       accessed from all processors in the system.
 
+@vindex MEM_SCOPE_CLUSTER
 @item The @code{MEM_SCOPE_CLUSTER} macro must be used when memory block will be
       accessed from all processors of the current cluster only. This is
       equivalent to @code{MEM_SCOPE_SYSTEM} when cluster support is disabled.
 
+@vindex MEM_SCOPE_CPU
 @item The @code{MEM_SCOPE_CPU} macro must be used when memory block will be
       accessed from the current processor only. This is equivalent to
       @code{MEM_SCOPE_SYSTEM} when multiprocessor support is disabled.
 
+@vindex MEM_SCOPE_CONTEXT
 @item The @code{MEM_SCOPE_CONTEXT} macro must be used when memory block will be
       accessed from the current running context only. This may be equivalent to
       @code{MEM_SCOPE_CPU}, @code{MEM_SCOPE_CLUSTER} or @code{MEM_SCOPE_SYSTEM}
       depending on cache coherency mechanism and scheduler context migration
       configuration.
 
+@vindex MEM_SCOPE_DEFAULT
 @item The @code{MEM_SCOPE_DEFAULT} macro selects the default memory scope. The
       default allocation scope can be changed with the
       @code{void mem_alloc_set_default(struct mem_alloc_region_s *region)} function.
