--- a/doc/pthread_implem/pthread_implem.texi
+++ b/doc/pthread_implem/pthread_implem.texi
@@ -373,7 +373,97 @@ error_t pthread_mutex_unlock(pthread_mutex_t *mutex)
 
 @chapter Available pthread services
 
-The following synchronization primitives are available:
+The following macros are available:
+
+@itemize
+@item @code{PTHREAD_MUTEX_NORMAL}
+@item @code{PTHREAD_MUTEX_ERRORCHECK}
+@item @code{PTHREAD_MUTEX_RECURSIVE}
+@item @code{PTHREAD_MUTEX_DEFAULT}
+@item @code{PTHREAD_MUTEX_INITIALIZER}
+@item @code{PTHREAD_RECURSIVE_MUTEX_INITIALIZER_NP}
+@item @code{PTHREAD_ERRORCHECK_MUTEX_INITIALIZER_NP}
+@item @code{PTHREAD_MUTEX_INITIALIZER}
+@item @code{PTHREAD_COND_INITIALIZER}
+@item @code{PTHREAD_RWLOCK_INITIALIZER}
+@item @code{PTHREAD_BARRIER_SERIAL_THREAD}
+@item @code{PTHREAD_BARRIER_INITIALIZER}
+@item @code{PTHREAD_CANCELED}
+@item @code{PTHREAD_CANCEL_DISABLE}
+@item @code{PTHREAD_CANCEL_ENABLE}
+@item @code{PTHREAD_CANCEL_DEFERRED}
+@item @code{PTHREAD_CANCEL_ASYNCHRONOUS}
+@end itemize
+
+The following types are available:
+
+@itemize
+@item @code{pthread_t}
+@item @code{pthread_attr_t}
+@item @code{pthread_mutexattr_t}
+@item @code{pthread_mutex_t}
+@item @code{pthread_spinlock_t}
+@item @code{pthread_condattr_t}
+@item @code{pthread_cond_t}
+@item @code{pthread_rwlockattr_t}
+@item @code{pthread_rwlock_t}
+@item @code{pthread_barrierattr_t}
+@item @code{pthread_barrier_t}
+@end itemize
+
+The following functions are available:
+
+@itemize
+@item @code{error_t pthread_create(pthread_t *thread, const pthread_attr_t *attr,
+            pthread_start_routine_t *start_routine, void *arg)}
+@item @code{void pthread_exit(void *retval)}
+@item @code{pthread_t pthread_self(void)}
+@item @code{void pthread_yield(void)}
+@item @code{error_t pthread_equal(pthread_t t1, pthread_t t2)}
+@item @code{error_t pthread_detach(pthread_t thread)}
+@item @code{error_t pthread_join(pthread_t thread, void **value_ptr)}
+@item @code{error_t pthread_mutex_init(pthread_mutex_t *mutex,
+            const pthread_mutexattr_t *attr)}
+@item @code{error_t pthread_mutex_destroy(pthread_mutex_t *mutex)}
+@item @code{error_t pthread_mutex_lock(pthread_mutex_t *mutex)}
+@item @code{error_t pthread_mutex_trylock(pthread_mutex_t *mutex)}
+@item @code{error_t pthread_mutex_unlock(pthread_mutex_t *mutex)}
+@item @code{error_t pthread_mutexattr_settype(pthread_mutexattr_t *attr, int_fast8_t type)}
+@item @code{error_t pthread_mutexattr_init(pthread_mutexattr_t *attr)}
+@item @code{error_t pthread_mutexattr_destroy(pthread_mutexattr_t *attr)}
+@item @code{error_t pthread_cond_init(pthread_cond_t *cond,
+            const pthread_condattr_t *attr)}
+@item @code{error_t pthread_cond_destroy(pthread_cond_t *cond)}
+@item @code{error_t pthread_cond_broadcast(pthread_cond_t *cond)}
+@item @code{error_t pthread_cond_signal(pthread_cond_t *cond)}
+@item @code{error_t pthread_cond_timedwait(pthread_cond_t *cond,
+                       pthread_mutex_t *mutex,
+                       const struct timespec *delay)}
+@item @code{error_t pthread_cond_wait(pthread_cond_t *cond, pthread_mutex_t *mutex)}
+@item @code{error_t pthread_rwlock_destroy(pthread_rwlock_t *rwlock)}
+@item @code{error_t pthread_rwlock_init(pthread_rwlock_t *rwlock, const pthread_rwlockattr_t *attr)}
+@item @code{error_t pthread_rwlock_rdlock(pthread_rwlock_t *rwlock)}
+@item @code{error_t pthread_rwlock_wrlock(pthread_rwlock_t *rwlock)}
+@item @code{error_t pthread_rwlock_tryrdlock(pthread_rwlock_t *rwlock)}
+@item @code{error_t pthread_rwlock_trywrlock(pthread_rwlock_t *rwlock)}
+@item @code{error_t pthread_rwlock_unlock(pthread_rwlock_t *rwlock)}
+@item @code{error_t pthread_barrier_destroy(pthread_barrier_t *barrier)}
+@item @code{error_t pthread_barrier_init(pthread_barrier_t *barrier,
+                             const pthread_barrierattr_t *attr,
+                             unsigned count)}
+@item @code{error_t pthread_barrier_wait(pthread_barrier_t *barrier)}
+@item @code{error_t pthread_spin_init(pthread_spinlock_t *spinlock, bool_t pshared)}
+@item @code{error_t pthread_spin_destroy(pthread_spinlock_t *spinlock)}
+@item @code{error_t pthread_spin_lock(pthread_spinlock_t *spinlock)}
+@item @code{error_t pthread_spin_trylock(pthread_spinlock_t *spinlock)}
+@item @code{error_t pthread_spin_unlock(pthread_spinlock_t *spinlock)}
+@item @code{void pthread_cleanup_push(void *, void*)}
+@item @code{void pthread_cleanup_pop(bool_t)}
+@item @code{void pthread_testcancel(void)}
+@item @code{void pthread_cancel(pthread_t thread)}
+@item @code{int_fast8_t pthread_setcancelstate(int_fast8_t state, int_fast8_t *oldstate)}
+@item @code{int_fast8_t pthread_setcanceltype(int_fast8_t type, int_fast8_t *oldtype)}
+@end itemize
 
 @bye
 
