--- a/doc/pthread_implem/pthread_implem.texi
+++ b/doc/pthread_implem/pthread_implem.texi
@@ -63,7 +63,7 @@ Hexo provides an execution context scheduler which can be used to
 write higher level thread, task, process... related APIs.
 
 Context scheduler functions are available in the
-@code{<hexo/scheduler.h>} header file.
+@code{<mutek/scheduler.h>} header file.
 
 @section Scheduler contexts
 
@@ -88,7 +88,7 @@ function which print a string and switch to the next runnable context.
 @smallexample
 @verbatim
 #include <hexo/context.h>
-#include <hexo/scheduler.h>
+#include <mutek/scheduler.h>
 
 struct sched_context_s a, b;
 
